--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "tampermonkey-vue-template",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "a vue template for dev tampermonkey plugin",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c rollup.config.js",
-    "watch": "yarn build --watch"
+    "build": "node rollup.build.js",
+    "watch": "gulp"
   },
   "author": "thinker",
   "license": "ISC",
   "devDependencies": {
+    "gulp": "^4.0.0",
     "rollup": "^1.2.2",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-vue": "^4.7.1",
-    "vue-template-compiler": "^2.6.6"
+    "vue-template-compiler": "^2.6.6",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "vue": "^2.6.6"
